# old-app-template

./: .env.example  .gitignore  Cargo.toml  README.md  TEMPLATE.md  cargo-generate.toml  template-readme.md
.cargo/: config
.github/workflows/: build.yml
contracts/: Cargo.toml  README.md
contracts/examples/: schema.rs
contracts/schema/: config_response.json  execute_msg.json  instantiate_msg.json  migrate_msg.json  query_msg.json
contracts/src/: contract.rs  error.rs  msg.rs  state.rs
contracts/src/handlers/: execute.rs  instantiate.rs  migrate.rs  mod.rs  query.rs  reply.rs
examples/: schema.rs
interfaces/: Cargo.toml  README.md
interfaces/src/: lib.rs  template.rs
schema/: execute_msg.json  instantiate_msg.json  migrate_msg.json  query_msg.json
scripts/: .env.example  Cargo.toml  README.md
src/: contract.rs  entrypoint.rs  error.rs  lib.rs  msg.rs
src/handlers/: commands.rs  instantiate.rs  mod.rs  queries.rs  replies.rs  reply.rs
src/package/: mod.rs  msg.rs  state.rs
template-scripts/: from-template.sh  pre-script.rhai  to-template.sh
