[package]
name = "interfaces"
version = "1.1.1"
edition = "2021"
#workspace.version = true
#workspace.authors = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abstract-os = { workspace = true }
cw-asset = { workspace = true }
cosmwasm-std = { workspace = true }
boot-core = "0.1.1"
boot-plus = "0.1.1"
boot-abstract = "0.2.0-beta.2"
serde_json = "1.0.79"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
template-addon = { package = " {{addon-name}}", path = "../contracts" }
