[package]
name = "scripts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
interfaces = { path = "../interfaces" }
boot-core = { path = "../../BOOT/boot-core" }
boot-plus = { path = "../../BOOT/boot-plus" }
boot-abstract = { path = "../../../Abstract/contracts/packages/boot-abstract" }
log = "0.4.14"
cosmwasm-std = { version = "1.1" }
anyhow = "1.0"
serde_json = "1.0.79"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
dotenv = "0.15.0"
env_logger = "0.9.0"
semver = { version = "1.0.13", default-features = false }
abstract-os = { path = "../../../Abstract/contracts/packages/abstract-os" }
template-addon = { package = "template-addon-name", path = "../contracts" }
